# team-optiker

./: README.md
backend/: .gitignore  CMakeLists.txt
backend/core/: CachedPriorityQueue.hpp  ExchangeController.cpp  ExchangeController.h  MatchingEngine.hpp  OrderBook.hpp  OrderBookSide.hpp  OrderEngine.cpp  OrderEngine.hpp  OrderStore.hpp  PositionStore.hpp  Symbols.hpp  common.hpp
backend/src/: common.h  main.cpp
backend/src/networking/: Listener.h  Session.cpp  Session.h  Users.cpp  Users.h
backend/tests/: OrderBookTest.cpp  OrderEngineTest.cpp  OrderStoreTest.cpp
frontend/: .gitignore
frontend/test-server/: client.ts  index.ts  package-lock.json  package.json
frontend/user/: package-lock.json  package.json
frontend/user/public/: index.html  manifest.json
frontend/user/src/: App.tsx  index.css  util.tsx
frontend/user/src/components/: Container.tsx  ListingComponent.tsx  NewChart.tsx  OrderGraph.tsx  OrderListComponent.tsx  OrderOverview.tsx  PriceChart.tsx
frontend/user/src/pages/: AdminPage.tsx  ExchangeView.tsx  Home.tsx  ListingDetail.tsx  Listings.tsx  News.tsx  OrderView.tsx  Register.tsx
frontend/user/src/state/: authStore.ts  client.ts  listingStore.ts  orderStore.ts  state.ts  store.ts
shared/: events.proto
